# mcp-qiskit

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json  shor_algorithm.py
.github/workflows/: pypi-publish.yml
examples/: shor_example.py
src/mcp_qiskit/: __init__.py  __main__.py  _backend.py  _circuit.py  _execution.py  _mcp.py
tests/: conftest.py  test_backend.py  test_circuit.py  test_execution.py  test_mcp.py
