[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-qiskit"
version = "0.1.0"
description = "MCP server exposing Qiskit 2.3.1 quantum computing functionality"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "qiskit==2.3.1",
    "qiskit-ibm-runtime>=0.33.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-qiskit[mcp,dev,test,lint]"]

[project.scripts]
mcp-qiskit = "mcp_qiskit.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-qiskit"
Repository = "https://github.com/daedalus/mcp-qiskit"
Issues = "https://github.com/daedalus/mcp-qiskit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_qiskit"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_qiskit"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "ARG"]
"src/mcp_qiskit/_backend.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=65"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
